# scripths

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  scripths.cabal
app/: Main.hs
docs/: non-cabal-backpack-prelude.md
examples/: analysis.ghci  analysis.md  compiled.md  git-ref.md
scripts/: format.sh  lint.sh
src/ScriptHs/: Compiled.hs  Markdown.hs  Notebook.hs  Parser.hs  Render.hs  Repl.hs  Run.hs  Version.hs
src/ScriptHs/CLI/: Types.hs
test/: Main.hs
test/Test/: Compiled.hs  Integration.hs  Markdown.hs  Notebook.hs  Parser.hs  Render.hs  Repl.hs  Run.hs  Version.hs
