cabal-version:      3.0
name:               scripths
version:            0.1.0.0
synopsis:           GHCi scripts for standalone execution and Markdown documentation.
description:        GHCi scripts for standalone execution and Markdown documentation.
homepage:           https://www.datahaskell.org/
license:            MIT
license-file:       LICENSE
author:             DataHaskell
maintainer:         mschavinda@gmail.com
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md, README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  ScriptHs.Parser,
                      ScriptHs.Render
    build-depends:    base >= 4 && < 5,
                      text >= 2.0 && < 3
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: OverloadedStrings

executable scripths
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >= 4 && < 5,
        scripths,
        text >= 2.0 && < 3,

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite scripths-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Test.Parser,
                      Test.Render
    build-depends:
        base >= 4 && < 5,
        scripths,
        text >= 1.2  && < 2.2,
        tasty >= 1.4  && < 1.6,
        tasty-hunit  >= 0.10 && < 0.11
    default-extensions: OverloadedStrings
    ghc-options:        -Wall
