cabal-version:      3.0
name:               scripths
version:            0.1.0.1
synopsis:           GHCi scripts for standalone execution and Markdown documentation.
description:        GHCi scripts for standalone execution (with dependency resolution) and Markdown documentation (produces inline output).
homepage:           https://www.datahaskell.org/
license:            MIT
license-file:       LICENSE
author:             DataHaskell
maintainer:         mschavinda@gmail.com
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md, README.md
tested-with:        GHC ==9.6.7
bug-reports:        https://github.com/DataHaskell/scripths/issues

source-repository head
  type:     git
  location: https://github.com/DataHaskell/scripths

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  ScriptHs.Parser,
                      ScriptHs.Render,
                      ScriptHs.Markdown,
                      ScriptHs.Notebook,
                      ScriptHs.Run
    build-depends:    base >= 4 && < 5,
                      filepath >= 1.4 && < 1.6,
                      process >= 1.6 && < 1.8,
                      temporary >= 1.3 && < 1.4,
                      text >= 2.0 && < 3
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: OverloadedStrings

executable scripths
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >= 4 && < 5,
        scripths,
        filepath >= 1.4 && < 1.6,
        text >= 2.0 && < 3,

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite scripths-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Test.Parser,
                      Test.Render,
                      Test.Markdown,
                      Test.Notebook
    build-depends:
        base >= 4 && < 5,
        scripths,
        text >= 1.2  && < 2.2,
        tasty >= 1.4  && < 1.6,
        tasty-hunit  >= 0.10 && < 0.11
    default-extensions: OverloadedStrings
    ghc-options:        -Wall
